Integrate weather api with the Presentation layer

--- a/presentation/src/main/res/layout/fragment_item_detail.xml
+++ b/presentation/src/main/res/layout/fragment_item_detail.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/layout_margin"
     android:orientation="vertical"
     tools:ignore="RtlHardcoded">
 
@@ -11,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
+        android:background="#fcdab0"
         android:orientation="vertical">
 
         <LinearLayout
@@ -22,16 +22,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="48dp"
-                tools:text="Dubai" />
+                android:text="Dubai"
+                android:textSize="48dp" />
 
             <TextView
+                android:id="@+id/weatherDay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
                 tools:text="Sunday" />
 
             <TextView
+                android:id="@+id/weatherText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="14dp"
@@ -43,33 +45,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/activity_horizontal_margin"
-
             android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 android:background="@color/detail_price_text_color" />
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_weight="2">
 
                 <TextView
+                    android:id="@+id/weatherTodayTemp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="48dp"
+                    android:textSize="70dp"
+                    android:includeFontPadding="false"
                     tools:text="37" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignTop="@id/weatherTodayTemp"
+                    android:layout_toEndOf="@id/weatherTodayTemp"
                     android:textSize="14dp"
-                    tools:text="C" />
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    tools:text="℃" />
 
-            </LinearLayout>
+            </RelativeLayout>
 
         </LinearLayout>
 
@@ -137,7 +143,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14dp"
-                    tools:text="wind" />
+                    tools:text="32c" />
 
             </LinearLayout>
         </LinearLayout>
@@ -148,6 +154,27 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
+
+        <include
+            android:id="@+id/weatherDailtyForecastView1"
+            layout="@layout/daily_forecast_view" />
+
+        <include
+            android:id="@+id/weatherDailtyForecastView2"
+            layout="@layout/daily_forecast_view" />
+
+        <include
+            android:id="@+id/weatherDailtyForecastView3"
+            layout="@layout/daily_forecast_view" />
+
+        <include
+            android:id="@+id/weatherDailtyForecastView4"
+            layout="@layout/daily_forecast_view" />
+
+        <include
+            android:id="@+id/weatherDailtyForecastView5"
+            layout="@layout/daily_forecast_view" />
+
 
     </LinearLayout>
 
