--- a/presentation/src/main/res/layout/daily_forecast_view.xml
+++ b/presentation/src/main/res/layout/daily_forecast_view.xml
@@ -20,7 +20,7 @@
         android:id="@+id/dayImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/btn_dialog" />
+        android:src="@drawable/sun_small" />
 
     <LinearLayout
         android:layout_width="wrap_content"
