--- a/presentation/src/main/res/layout/fragment_item_detail.xml
+++ b/presentation/src/main/res/layout/fragment_item_detail.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     tools:ignore="RtlHardcoded">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
@@ -14,6 +14,7 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/headingLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/activity_horizontal_margin"
@@ -44,19 +45,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_horizontal_margin"
-            android:orientation="horizontal">
+            android:layout_below="@id/headingLayout"
+            android:orientation="horizontal"
+            android:padding="@dimen/activity_vertical_margin">
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                android:background="@color/detail_price_text_color" />
+                android:src="@drawable/sun" />
 
             <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2">
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:gravity="center_vertical">
 
                 <TextView
                     android:id="@+id/weatherTodayTemp"
@@ -70,10 +73,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@id/weatherTodayTemp"
+                    android:layout_marginStart="@dimen/header_margin"
                     android:layout_marginTop="@dimen/activity_vertical_margin"
                     android:layout_toEndOf="@id/weatherTodayTemp"
-                    android:textSize="14dp"
-                    tools:text="℃" />
+                    android:text="℃"
+                    android:textSize="14dp" />
 
             </RelativeLayout>
 
@@ -82,6 +86,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -116,14 +122,14 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14dp"
-                    android:text="NOT AVAILBALE" />
+                    android:text="NOT AVAILBALE"
+                    android:textSize="14dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14dp"
-                    android:text="Humidity" />
+                    android:text="Humidity"
+                    android:textSize="14dp" />
 
             </LinearLayout>
 
@@ -151,7 +157,7 @@
             </LinearLayout>
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
