--- a/presentation/src/main/res/layout/daily_forecast_view.xml
+++ b/presentation/src/main/res/layout/daily_forecast_view.xml
@@ -13,7 +13,7 @@
         android:id="@+id/dayName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14dp"
+        android:textSize="@dimen/daily_forecast_text_size"
         tools:text="29" />
 
     <ImageView
@@ -30,7 +30,7 @@
             android:id="@+id/dayMax"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10dp"
+            android:textSize="@dimen/daily_forecast_text_size"
             tools:text="32c" />
 
         <TextView
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/header_margin"
-            android:textSize="10dp"
+            android:textSize="@dimen/daily_forecast_text_size"
             tools:text="32c" />
 
     </LinearLayout>
