--- a/presentation/src/main/res/layout/fragment_items_list.xml
+++ b/presentation/src/main/res/layout/fragment_items_list.xml
@@ -1,29 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-  <android.support.v4.widget.SwipeRefreshLayout
-      android:id="@+id/swipe_container"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      >
+    android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_items"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        />
+        android:layout_height="match_parent">
 
-  </android.support.v4.widget.SwipeRefreshLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_items"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical" />
 
-  <include
-      layout="@layout/view_progress"
-      />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
-  <include
-      layout="@layout/view_retry"
-      />
+    <include layout="@layout/view_progress" />
+
+    <include layout="@layout/view_retry" />
 
 </RelativeLayout>
