--- a/presentation/src/main/res/layout/row_item.xml
+++ b/presentation/src/main/res/layout/row_item.xml
@@ -122,7 +122,7 @@
                 android:gravity="center_vertical"
                 android:textColor="@android:color/black"
                 android:textStyle="italic"
-                android:text="reviews" />
+                android:text="@string/reviews" />
 
         </LinearLayout>
 
